--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -139,6 +139,7 @@
 	bottom: 0;
 	padding: var(--p4);
 	width: 100%;
+	overflow: hidden;
 }
 
 .nav__social{
