--- a/css/sections/work.css
+++ b/css/sections/work.css
@@ -42,11 +42,13 @@
 	background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+	transform: translateX(-10%);
 	opacity: 0;
 	transition: var(--5s-ease);
 }
 
 .work-card__figure[data-show="true"]{
+	transform: translateX(0);
 	opacity: 1;
 }
 
